syntax = "proto3";

package api.videoCore.service.v1;

option go_package = "lehu-video/api/videoCore/service/v1;v1";
option java_multiple_files = true;
option java_package = "api.videoCore.service.v1";
import "google/api/annotations.proto";
import "api/videoCore/service/v1/base.proto";

message User {
	int64 id = 1; // 用户id
	string name = 2; // 用户名称
	string avatar = 3; // 用户头像Url
	string background_image = 4; // 用户个人页顶部大图
	string signature = 5; // 个人简介
	string mobile = 6; // 手机号
	string email = 7; // 邮箱
	int64 follow_count = 8; // 关注总数
	int64 follower_count = 9; // 粉丝总数
	int64 total_favorited = 10; // 获赞数量
	int64 work_count = 11; // 作品数量
	int64 favorite_count = 12; // 点赞数量
}

service UserService {
	rpc CreateUser (CreateUserReq) returns (CreateUserResp){
		option (google.api.http) = {
			post: "/v1/user"
			body: "*"
		};
	};
	rpc UpdateUser (UpdateUserInfoReq) returns (UpdateUserInfoResp){
		option (google.api.http) = {
			get: "/v1/user/info"
		};
	};
	rpc GetUserInfo (GetUserInfoReq) returns (GetUserInfoResp){
		option (google.api.http) = {
			put: "/v1/user"
			body:"*"
		};
	};
	rpc GetUserByIdList(GetUserByIdListReq) returns (GetUserByIdListResp);
}

message CreateUserReq{
	string mobile = 1;
	string email = 2;
	int64 account_id = 3;
}

message CreateUserResp{
	Metadata meta = 1;
	int64 user_id = 2;
}

message GetUserInfoReq{
	int64 user_id = 1;
	int64 account_id = 2;
}

message GetUserInfoResp{
	Metadata meta = 1;
	User user = 2;
}

message UpdateUserInfoReq{
	int64 user_id = 1;
	string name = 2;
	string avatar = 3;
	string background_image = 4;
	string signature = 5;

}

message UpdateUserInfoResp{
	Metadata meta = 1;
}

enum UpdateUserImageType{
	AVATAR = 0;
	BACKGROUND_IMAGE = 1;
}

message GetUserByIdListReq{
	repeated int64 user_id_list = 1;
}

message GetUserByIdListResp{
	repeated User user_list = 1;
	Metadata meta = 2;
}


